Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjTextObj.quorum
Text t
t:setValue("text")
Boolean bool = cast(Boolean, t)